--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,6 @@
     justify-content: flex-start;
     align-items: center;
     padding-top: 20px;
-    background-image: url("/img/background.jpg");
     background-size: cover;
     background-position: center;
     height: 100%;
@@ -17,8 +16,7 @@
     left: 0;
 }
 h1 {
-    color: white;
-    text-shadow: 2px 2px #525050;
+    color: #020000;
     font-size: 70px;
 
 }
@@ -27,23 +25,6 @@ hr{
     text-align:left;"
 }
 p {
-    color: white;
+    color: #000000;
     font-size: 20px;
-    text-shadow: 1px 1px #423e3e;
-}
-.icon-container {
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-img {
-    height: 70px;
-    margin: 0 20px;
 }
